--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Router by dmkuznetsov</title>
@@ -8,71 +8,88 @@
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/respond.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/json3/3.2.6/json3.min.js"></script>
     <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!--[if lt IE 8]>
     <link rel="stylesheet" href="stylesheets/ie.css">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  </head>
-  <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/dmkuznetsov/js-router">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/dmkuznetsov/js-router/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/dmkuznetsov/js-router/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
+</head>
+<body>
+<div id="header">
+    <nav>
+        <li class="fork"><a href="https://github.com/dmkuznetsov/js-router">View On GitHub</a></li>
+        <li class="downloads"><a href="https://github.com/dmkuznetsov/js-router/zipball/master">ZIP</a></li>
+        <li class="downloads"><a href="https://github.com/dmkuznetsov/js-router/tarball/master">TAR</a></li>
+        <li class="title">DOWNLOADS</li>
+    </nav>
+</div>
+<!-- end header -->
 
-    <div class="wrapper">
+<div class="wrapper">
 
-      <section>
+    <section>
         <div id="title">
-          <h1>Router</h1>
-          <p>JavaScript library for client-side routing</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/dmkuznetsov">dmkuznetsov</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+            <h1>Router</h1>
+
+            <p>JavaScript library for client-side routing</p>
+            <hr>
+            <span class="credits left">Project maintained by <a
+                    href="https://github.com/dmkuznetsov">dmkuznetsov</a></span>
+            <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a
+                    href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
+
+        <h2>
+            <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span
+                    class="octicon octicon-link"></span></a>Example:</h3>
+
+        <ul>
+            <li><a href="#!/">main</a></li>
+            <li><a href="#!/hello/john">hello, John</a></li>
+            <li><a href="#!/hello/john.do">hello, John Do</a></li>
+            <li><a href="#!/not-found">not found</a></li>
+        </ul>
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+            Result: <span id="result"></span>
+        </h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+        <pre id="code">
+var showResult = function (text) {
+    document.getElementById('result').innerHTML = text;
+}
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+var router = new Router('!');
+router
+    .when('/', function () {
+        showResult('Main page. Request: ' + JSON.stringify(this.request));
+    })
+    .when('/hello/:name', function (name) {
+        showResult('Hello, ' + name + '! Request: ' + JSON.stringify(this.request));
+    })
+    // we can use get values as arguments
+    // or we can use this.request in Route context
+    .when('/hello/:name.:surname', function (name, surname) {
+        showResult('My name is ' + name + ' ' + surname + '! Request: ' + JSON.stringify(this.request));
+    })
+    // otherwise function haven't route context, so this.request will be undefined
+    .otherwise(function () {
+        showResult('Page not found')
+    })
+    .listen();
+        </pre>
+    </section>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
+</div>
+<!--[if !IE]>
+<script>fixScale(document);</script><![endif]-->
+<script src="javascripts/router.js"></script>
+<script>
+    var code = eval(document.getElementById('code').innerText);
+</script>
+</body>
 </html>
